# mactech

./: .gitignore  AI_CONTRACT_INTEGRATION.md  AI_ENGINEER_OPPORTUNITIES.md  AUTH_SETUP.md  ENV_SETUP.md  FEEDBACK_IMPLEMENTATION_VERIFICATION.md  INGESTION_INSTRUCTIONS.md  MIGRATION_READY.md  MacTech_GoogleSlides_Generator.gs  MacTech_GoogleSlides_Generator_README.md  MacTech_PowerPoint_Generator.bas  MacTech_PowerPoint_Generator_README.md  PRODUCTION_BUILD_PLAN.md  Procfile  QUICK_START_GoogleSlides.md  RAILWAY_DATABASE_SETUP.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_POSTGRESQL_SETUP.md  RAILWAY_SQLITE_SETUP.md  README.md  SAM_GOV_API_IMPROVEMENTS.md  SAM_GOV_API_SETUP.md  SECURITY.md  TESTING_SAM_GOV_SEARCH.md  brian-letters-vboc-apex.md  instrumentation.ts  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vault-api-get-endpoint.py
stig_generator/: ANALYSIS_COMPLETE.md  BENCHMARK2_INTEGRATION_SUMMARY.md  CLASSIFICATION_AND_TERMINOLOGY_UPDATE.md  CLASSIFICATION_FIXED.md  COMPREHENSIVE_REFINEMENT.md  CTP_FILTERING_FIXED.md  CURSOR_WORKFLOW.md  GENERATORS_REFINED.md  IMPROVEMENTS.md  IMPROVEMENT_LOOPS.md  README.md  README_CURSOR_SETUP.md  RECALIBRATION_PLAN.md  REFACTORING_SUMMARY.md  REFINEMENTS_APPLIED.md  REFINEMENT_COMPLETE.md  REFINEMENT_SUMMARY.md  REVIEW_AND_REFINEMENT.md  SCAP_INTEGRATION_COMPLETE.md  SCRIPTS_README.md  STATISTICS_VERIFIED.md  STIG_ANALYSIS.md  WEB_SERVER_UPDATE.md  pyproject.toml  requirements.txt  start_server.sh  test_generated_playbooks.py  test_sanity.py  validate_playbooks.py  web_server.py
(+1220 files in other folders)
